[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0.11"
chrono = { version = "0.4.31", features = ["serde"] }
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
warp = "0.3"

[profile.dev]
debug = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
