[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0.11"
aws-config = "1.1.1"
aws-sdk-secretsmanager = "1"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.9.0"
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
log = "0.4"
num-traits = "0.2"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
warp = "0.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
