[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
aws-config = "1.1.1"
aws-sdk-kinesis = "1.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
once_cell = "1.19.0"
prost = "0.12.3"
prost-types = "0.12.3"
rust_decimal = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
tungstenite = "0.21.0"
url = "2.5.0"
