[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
aws-config = "1.1.1"
aws-sdk-kinesis = "1.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
env_logger = "0.9.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.19.0"
prost = "0.12.3"
prost-types = "0.12.3"
rust_decimal = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.9"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
tungstenite = "0.21.0"
url = "2.5.0"
warp = "0.3"
