[project]
name = "narwhal"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "boto3==1.34.113",
  "influxdb-client==1.42.0",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pyright",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
exclude = [
  "**/__pycache__",
  "**/*.egg-info",
  ".venv",
  "venv",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "build",
  "dist",
]
