[project]
name = "narwhal"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "apscheduler==3.10.1",
  "boto3==1.34.113",
  "fastapi",
  "influxdb-client==1.42.0",
  "uvicorn[standard]",
  "xgboost==1.7.5",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]

[tool.mypy]
exclude = ["(^venv/|^\\.venv/)", "build/", "dist/"]
files = ["src"]
strict = true

[[tool.mypy.overrides]]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
module = [
  "influxdb_client.*",
  "apscheduler.*",
]

[tool.ruff]
exclude = [
  "**/__pycache__",
  "**/*.egg-info",
  ".venv",
  "venv",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "build",
  "dist",
]
line-length = 100
target-version = "py311"
